styles/style.css
*{
    box-sizing: border-box;
    color: #E9DFE0;
    font-family: 'Poppins', 'League Spartan', Arial, Helvetica, sans-serif;
    /**/
}

body{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #4717f7;
}

.card{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 450px;
    height: 575px;
    background-color: #130e20;
    border-radius: 5px;
}

.card.active{
    height: 600px;
}

header{
    text-align: center;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

header p{
    text-align: left;
}

.qr-form{
    width: 100%;
}

#result{
    width: 100%;
    text-align: center;
    font-size: 16px;
}

#reader{
    width: 85%;
    height: 375px;
    background-color: #130e2080;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    /* padding-top: 50px !important; */
}

#reader button{
    position: absolute;
    bottom: 5px;
    left: 5%;
    width: 90%;
    height: 55px;
    background-color: #a43acb;
    border: none;
    outline: none;
    border-radius: 5px;
    font-size: 17px;
    cursor: pointer;
    font-weight: 500;
    margin-bottom: 2.5%;
}

.text-output{
    width: 100%;
    display: none;
}

.buttons{
    display: flex;
    justify-content: space-between;
    margin-top: 10px;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

.buttons button{
    height: 50px;
    outline: none;
    border: none;
    width: calc(100% / 2 - 20px);
    border-radius: 5px;
    font-size: 17px;
    cursor: pointer;
    font-weight: 500;
    background: #E9DFE0;
    color: #130e20;
}

#result textarea{
    width: 90%;
    height: 120px;
    outline: none;
    background: none;
    padding: 10px 15px;
    border: 1px solid #0e0a18;
}

@media only screen and (max-width: 768) {
    .card{
        width: 70vw;
    }

    #reader{
        width: 250px;
        height: 250px;
    }
}

